[gd_scene load_steps=5 format=2]

[ext_resource path="res://palceholder_font.tres" type="DynamicFont" id=1]
[ext_resource path="res://Scripts/Lobby.gd" type="Script" id=4]

[sub_resource type="GDScript" id=1]
script/source = "extends Button

func _pressed():
	pass
"

[sub_resource type="GDScript" id=2]
script/source = "extends Button

func _pressed():
	pass
"

[node name="Menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HostButton" type="Button" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -412.0
margin_top = 30.0
margin_right = 412.0
margin_bottom = 180.0
script = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel" type="RichTextLabel" parent="HostButton"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -61.5
margin_top = -39.5
margin_right = 61.5
margin_bottom = 39.5
mouse_filter = 2
size_flags_stretch_ratio = 0.0
custom_fonts/normal_font = ExtResource( 1 )
text = "Host"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StartButton" type="Button" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 100.0
margin_top = 50.0
margin_right = -100.0
margin_bottom = -400.0
script = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel" type="RichTextLabel" parent="StartButton"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 274.67
margin_top = 38.6742
margin_right = -232.33
margin_bottom = -1.32581
mouse_filter = 2
size_flags_stretch_ratio = 0.0
custom_fonts/normal_font = ExtResource( 1 )
text = "Start Game"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="JoinButton" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -412.0
margin_top = -180.0
margin_right = 412.0
margin_bottom = -30.0
script = SubResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel" type="RichTextLabel" parent="JoinButton"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -50.5
margin_top = -42.5
margin_right = 50.5
margin_bottom = 42.5
mouse_filter = 2
size_flags_stretch_ratio = 0.0
custom_fonts/normal_font = ExtResource( 1 )
text = "Join"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayerList" type="RichTextLabel" parent="."]
margin_left = 105.0
margin_top = 212.0
margin_right = 921.0
margin_bottom = 384.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayerName" type="LineEdit" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -267.5
margin_top = 1.88458
margin_right = 267.5
margin_bottom = 88.8846
custom_fonts/font = ExtResource( 1 )
align = 1
max_length = 20
placeholder_text = "username"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="IP" type="LineEdit" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -441.253
margin_top = -112.0
margin_right = -30.2535
margin_bottom = -33.0
custom_fonts/font = ExtResource( 1 )
align = 1
max_length = 20
placeholder_text = "ip"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Port" type="LineEdit" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 50.5
margin_top = -112.0
margin_right = 461.5
margin_bottom = -33.0
custom_fonts/font = ExtResource( 1 )
align = 1
max_length = 20
placeholder_text = "port"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="HostButton" to="." method="_on_HostButton_pressed"]
[connection signal="pressed" from="StartButton" to="." method="_on_StartButton_pressed"]
[connection signal="pressed" from="JoinButton" to="." method="_on_JoinButton_pressed"]
